--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/storybook__react": "5.2.1",
     "@types/yoga-layout": "1.9.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -38,5 +39,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "5.3.19",
+    "@storybook/addon-knobs": "5.3.19",
+    "@storybook/addon-links": "5.3.19",
+    "@storybook/addon-notes": "5.3.19",
+    "@storybook/addons": "5.3.19",
+    "@storybook/preset-create-react-app": "3.1.4",
+    "@storybook/react": "5.3.19"
   }
 }
