--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-decorators": "7.10.4",
     "@babel/preset-env": "7.10.4",
     "@ib/api-constants": "2.0.0",
+    "@ib/mobx-promise": "2.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,12 +17,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-loader-spinner": "3.1.0",
+    "@types/react-router-dom": "5.1.5",
     "@types/storybook__react": "5.2.1",
     "@types/styled-components": "5.1.1",
     "@types/yoga-layout": "1.9.2",
+    "mobx": "5.15.4",
+    "mobx-react": "6.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "3.1.14",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "5.1.1",
     "typescript": "~3.7.2"
