--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-env": "7.10.4",
     "@ib/api-constants": "2.0.0",
     "@ib/mobx-promise": "2.0.0",
+    "@reach/router": "1.3.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
