--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdast": "3.0.3",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-aria-modal": "4.0.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-loader-spinner": "3.1.0",
     "@types/react-router-dom": "5.1.5",
@@ -25,6 +26,7 @@
     "mobx": "5.15.4",
     "mobx-react": "6.2.2",
     "react": "^16.13.1",
+    "react-aria-modal": "4.0.0",
     "react-dom": "^16.13.1",
     "react-loader-spinner": "3.1.14",
     "react-router-dom": "5.2.0",
