--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-loader-spinner": "3.1.0",
     "@types/react-router-dom": "5.1.5",
+    "@types/react-select": "3.0.14",
     "@types/storybook__react": "5.2.1",
     "@types/styled-components": "5.1.1",
     "@types/yoga-layout": "1.9.2",
@@ -31,6 +32,7 @@
     "react-loader-spinner": "3.1.14",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "3.1.0",
     "styled-components": "5.1.1",
     "typescript": "~3.7.2"
   },
